# Drone-exploration

./: Makefile  README.md  docker-compose.yml
client/: Dockerfile.client  package-lock.json  package.json
client/src/: index.html  styles.scss
client/src/app/: app.module.ts
client/src/environments/: environment.ts
common/: commands_packet.csv
embedded/: .built-in.o.cmd  Makefile
embedded/src/: .built-in.o.cmd  .main.o.cmd  Kbuild  main.cpp
embedded/src/common/: data.h  state.h
embedded/src/scripts/: drone_connect.py
embedded/src/sensor_module/: .built-in.o.cmd  .sensor_module.o.cmd  Kbuild  sensor_module.cpp  sensor_module.h
embedded/src/signal_manager/: .built-in.o.cmd  .signal_manager.o.cmd
embedded/src/tasks/: .built-in.o.cmd  Kbuild  tasks_config.h
server/: Dockerfile.server
server/src/: app.py  server_setup.py
server/src/communication/: callbacks_radio.py  command_drone.py  communication_client.py  communication_drone.py  packet.py
server/src/constants/: constants.py
server/src/database/: connector.py  constants.py  database.py  database_module.py  object_entry.py
server/src/drone/: drone.py
server/src/map/: map.py  obstacle.py
server/tools/: requirements.txt  setup-venv.sh
simulator/: CMakeLists.txt  Dockerfile  start.sh
simulator/controllers/: CMakeLists.txt
simulator/experiments/: crazyflie_sensing.argos
simulator/loop_functions/: CMakeLists.txt
simulator/loop_functions/crazyflie_sensing_loop_functions/: CMakeLists.txt  crazyflie_sensing_loop_functions.cpp  crazyflie_sensing_loop_functions.h
(+71 files in other folders)
